prevent apple sign in button on mobile

--- a/src/css/Login/login.css
+++ b/src/css/Login/login.css
@@ -223,7 +223,7 @@ body{
     #loginPageWeb{
         display:none
     }
-    #buttonDivGoogle{
+    #AppleSignInButton{
         display: none;
     }
     #loginPageMobile{
@@ -235,7 +235,7 @@ body{
     #loginPageWeb{
         display:flex
     }
-    #buttonDivGoogle{
+    #AppleSignInButton{
         display: block;
     }
     #loginPageMobile{
